--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,17 @@
+sudo: false
+dist: xenial
 language: php
 
-sudo: false
-
 php:
-  - 5.4
-  - 5.5
-  - 5.6
-  - 7.0
-  - hhvm
+  - 7.2
+  - 7.3
+  - 7.4
 
 before_script:
   - composer install
 
 script:
-  - phpunit
+  - vendor/bin/phpunit --coverage-clover=coverage.xml
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
