--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,10 @@
         }
     ],
     "require": {
-        "php": ">=5.4"
+        "php": ">=7.2"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^8.5"
     },
     "autoload": {
         "psr-4": {
@@ -24,4 +27,3 @@
         }
     }
 }
-
